<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="1dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_text_bank"
                style="@style/tv_text_bank"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <TextView

                    android:id="@+id/holderName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/accont_holder_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ac_holderName"
                    style="@style/tv_text_bank"
                    android:gravity="center" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_c_no"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ac_no"
                    style="@style/tv_text_bank" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ifsc_no"
                    android:textColor="@color/colorPrimary"

                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ifsc_code"
                    style="@style/tv_text_bank"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/address_head"
                    android:textColor="@color/colorPrimary"

                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address"
                    style="@style/tv_text_bank"
                    android:layout_marginTop="3dp"
                    android:gravity="center" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>